keypath-proc-macros/tests/keypath/illegal_index.stderr
error: collection indices must be string or unsigned integer literals
  --> $DIR/illegal_index.rs:16:46
   |
16 |     let _ = keypath!(DemoStruct.friend_lists[1.0].name);
   |                                              ^^^

error: Brackets must contain a string or integer literal
  --> $DIR/illegal_index.rs:17:45
   |
17 |     let _ = keypath!(DemoStruct.friend_lists[-5].name);
   |                                             ^^^^

error: identifiers must be strings or integers
  --> $DIR/illegal_index.rs:18:46
   |
18 |     let _ = keypath!(DemoStruct.friend_lists[5_u8].name);
   |                                              ^^^^

error: identifiers must be strings or integers
  --> $DIR/illegal_index.rs:19:46
   |
19 |     let _ = keypath!(DemoStruct.friend_lists[5_f64].name);
   |                                              ^^^^^

error: Brackets must contain a string or integer literal
  --> $DIR/illegal_index.rs:20:45
   |
20 |     let _ = keypath!(DemoStruct.friend_lists[five].name);
   |                                             ^^^^^^

error: identifiers must be strings or integers
  --> $DIR/illegal_index.rs:21:46
   |
21 |     let _ = keypath!(DemoStruct.friend_lists['5'].name);
   |                                              ^^^
